TrailORG/src/objects/Policy_Type__c.object
<CustomObject>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insured_Amount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policy Types</relationshipLabel>
        <relationshipName>Policy_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy</label>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Policy Types</relationshipLabel>
        <relationshipName>Policy_Types</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Policy Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>